--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 <head><title>Left 4 Dead 411</title></head>
 <body style=”margin:0px;padding:1px;background:#000000;”>
-<img src=”https://i.imgur.com/KO006jZ.jpg” style=”width:100%;height:100%;” />
+<body>
+<img src="Staregineer.jpg” style=”width:100%;height:100%;” />
 </body>
 </html>
